Funciones index y show de Post, terminadas
