# src/controller/PostController.js
@@ -1,43 +1,30 @@
-import pool from "../bd/Pool.js"
-
-const validateRole = async (requestingUserId, targetUserId = null) => {
-  const userSql = "SELECT role FROM users WHERE user_id = ?";
-
-  const [rs] = await pool.execute(userSql, [requestingUserId]);
-
-  if (rs.length === 0) {
-    throw { message: "Usuario no encontrado", status: 404 };
-  }
-
-  const { role } = rs[0];
-
-  
-  if (role !== "admin" && requestingUserId !== targetUserId) {
-    throw { message: "Usuario no autorizado", status: 401 };
-  }
-};
-
-
+import pool from "../bd/Pool.js";
 
 
 const index = async (req, res) => {
   // #swagger.tags = ['Posts']
   try {
-    const { headers, params} = req;
+    const { headers, query,  } = req;
 
+ 
+      
+
+      if (query.title) {
+         const titleSql = "SELECT * FROM posts WHERE title LIKE ?"
+    const [titles] = await pool.execute(titleSql, [`%${query.title}%`])
+
+      res.status(200).json(titles)
+      }
+      if (query.category_id) {
+         const titleSql = "SELECT * FROM categories WHERE category_id = ?"
+    const [categories] = await pool.execute(titleSql, [query.category_id])
+
+      res.status(200).json(categories)
+      }
     
-    const userSql = "SELECT * FROM users WHERE user_id = ?";
-    const [userResult] = await pool.execute(userSql, [headers.user_id]);
-
-    if (userResult.length === 0) {
-      throw { message: "El usuario no existe", status: 401 };
-    }
-
-   
-    const postSql = "SELECT * FROM posts";
-    const [response] = await pool.execute(postSql);
-
-    res.status(200).json(response);
+     
+    
+    
   } catch (error) {
     res.status(error.status || 500).json({ error: error.message });
   }
@@ -46,92 +33,88 @@ const index = async (req, res) => {
 const show = async (req, res) => {
   // #swagger.tags = ['Posts']
 
-    try {
-    const { headers, params } = req;
+   try {
+    const { params } = req;
 
-    // Verificar si el usuario existe
-    const userSql = 'SELECT * FROM users WHERE user_id = ?';
-    const [userResult] = await pool.execute(userSql, [headers.user_id]);
-
-    if (userResult.length === 0) {
-      throw { message: "El usuario no existe", status: 401 };
+    
+    const sql = "SELECT * FROM posts WHERE post_id = ?"
+    const [[response]] = await pool.execute(sql, [params.id])
+    
+    if (!response) { 
+       res.status(404).json({ error: "publicacion no encontrado" });
+      return;
     }
-
-    const postsql = "SELECT * FROM posts WHERE user_id = ?";
-    const [response] = await pool.execute(postsql, [params.id]);
-
-    if (response.length === 0) {
-      throw { message: "Publicación no encontrada", status: 404 };
-    }
-
-      
-      
-    res.status(200).json(response);
+    res.status(200).json(response)
   } catch (error) {
-    res.status(error.status || 500).json({ error: error.message });
+    res.status(error.status || 500).json({error: error.message})
   }
-
 };
 
-
-const store = async (req, res) => { 
+const store = async (req, res) => {
   // #swagger.tags = ['Posts']
 
-  const required = ["username", "email", "password", "role"]
-  
+  const required = ["user_id", "email", "password", "role"];
+
   try {
-    const { body } = req
-    const validate = required.filter(field => !(field in body))
+    const { body } = req;
+    const validate = required.filter((field) => !(field in body));
 
-    if (validate.length !== 0) { 
-      throw {message: `el campo ${validate.join (',')} se requiere`, status: 400}
+    if (validate.length !== 0) {
+      throw {
+        message: `el campo ${validate.join(",")} se requiere`,
+        status: 400,
+      };
     }
-    const sql = "INSERT INTO users (username, email, password, role) VALUES (?,?,?,?)"
+    const sql =
+      "INSERT INTO users (username, email, password, role) VALUES (?,?,?,?)";
 
-    await pool.execute(sql, [body.username, body.email, body.password, body.role,])
+    await pool.execute(sql, [
+      body.username,
+      body.email,
+      body.password,
+      body.role,
+    ]);
 
-    res.status(201).json({message: "User created successfylly"})
+    res.status(201).json({ message: "User created successfylly" });
   } catch (error) {
     res.status(error.status || 500).json({ error: error.message });
   }
-}
+};
 
-const update = async (req, res) => { 
+const update = async (req, res) => {
   // #swagger.tags = ['Posts']
-  
+
   try {
-    const { body, headers, params } = req
-    
-      if (!headers.user_id) {
+    const { body, headers, params } = req;
+
+    if (!headers.user_id) {
       throw { message: "user_id en los encabezados es necesario", status: 400 };
     }
 
-
     if (!params.id || !body.role) {
-       throw { message: "user_id y role son necesarios", status: 400 };
+      throw { message: "user_id y role son necesarios", status: 400 };
     }
-     await validateRole(headers.user_id, params.id)
+    await validateRole(headers.user_id, params.id);
 
-    const sql = "UPDATE users SET role = ? WHERE user_id = ?"
+    const sql = "UPDATE users SET role = ? WHERE user_id = ?";
 
-    await pool.execute(sql, [body.role ,params.id])
+    await pool.execute(sql, [body.role, params.id]);
     res.status(201).json({ message: " Role updated successfully" });
   } catch (error) {
     res.status(error.status || 500).json({ error: error.message });
   }
-
-}
+};
 
 const destroy = async (req, res) => {
   // #swagger.tags = ['Posts']
- try {
+  try {
     const { params, headers } = req;
 
-   await validateRole(headers.user_id, params.id)
-   
+    await validateRole(headers.user_id, params.id);
+
     const sql = "DELETE FROM  users WHERE user_id = ? ";
 
-    await pool.execute(sql, [ params.id]);
+    await pool.execute(sql, [params.id]);
 
     res.status(201).json({ message: " User deleted successfully" });
   } catch (error) {
